# strategic-ttc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: AIME-Llama-3-8B--temp-0.6--samples-128--max-512.yaml  AIME-Llama-3.1-8B--temp-0.6--samples-128--max-512.yaml  AIME-Llama-3.2-1B--temp-0.6--samples-128--max-512.yaml  AIME-Llama-3.2-3B--temp-0.6--samples-128--max-512.yaml  AIME-Qwen2-0.5B--temp-0.7--samples-128--max-512.yaml  AIME-Qwen2-1.5B--temp-0.7--samples-128--max-512.yaml  AIME-Qwen2-7B--temp-0.7--samples-128--max-512.yaml  AIME-Qwen2.5-3B--temp-0.7--samples-128--max-512.yaml  AIME-Qwen2.5-7B--temp-0.7--samples-128--max-512.yaml  AIME-R1-D-Llama-8B--temp-0.6--samples-32--max-2048.yaml  AIME-R1-D-Qwen-1.5B--temp-0.6--samples-32--max-2048.yaml  AIME-R1-D-Qwen-7B--temp-0.6--samples-32--max-2048.yaml  GPQA-Llama-3-8B--temp-0.6--samples-128--max-512.yaml  GPQA-Llama-3.1-8B--temp-0.6--samples-128--max-512.yaml  GPQA-Llama-3.2-1B--temp-0.6--samples-128--max-512.yaml  GPQA-Llama-3.2-3B--temp-0.6--samples-128--max-512.yaml  GPQA-Qwen2-0.5B--temp-0.7--samples-128--max-512.yaml  GPQA-Qwen2-1.5B--temp-0.7--samples-128--max-512.yaml  GPQA-Qwen2-7B--temp-0.7--samples-128--max-512.yaml  GPQA-Qwen2.5-3B--temp-0.7--samples-128--max-512.yaml  GPQA-Qwen2.5-7B--temp-0.7--samples-128--max-512.yaml  GPQA-R1-D-Llama-8B--temp-0.6--samples-32--max-2048.yaml  GPQA-R1-D-Qwen-1.5B--temp-0.6--samples-32--max-2048.yaml  GPQA-R1-D-Qwen-7B--temp-0.6--samples-32--max-2048.yaml  Llama-3-8B--temp-0.6--samples-128--max-512.yaml  Qwen2-7B--temp-0.7--samples-128--max-512.yaml  (+28 more)
(+42 files in other folders)
