[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic-ttc"
version = "0.1.0"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["strategic_ttc*"]

[project.scripts]
strategic-ttc-generate = "strategic_ttc.cli:main"
